<resources>
    <string name="app_name">CivilAdvocacyApp</string>
    <string name="placeholder_text"></string>
    <string name="about_title">Civil Advocacy</string>
    <string name="about_text">Data provided by</string>
    <string name="clickable_text"><u>Google Civic Information API</u></string>
    <string name="copyright">© 2022, Eric Zhang</string>
    <string name="version">Version 1.0</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="website">Website:</string>
    <string name="email">Email:</string>
    <string name="deniedText">Location Services Permission Denied</string>
    <string name="noNetworkTitle">No Network Connection</string>
    <string name="noNetworkBody">Data cannot be accessed/loaded with an internet connection.</string>
</resources>