<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/official_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".OfficialActivity">

    <TextView
        android:id="@+id/official_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#9C27B0"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/official_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="11dp"
        android:text="Danny K. Davis"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/official_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_location" />

    <TextView
        android:id="@+id/official_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/official_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_name" />

    <TextView
        android:id="@+id/official_party"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="57dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/official_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_title" />

    <ImageView
        android:id="@+id/official_picture"
        android:layout_width="172dp"
        android:layout_height="216dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        android:onClick="onImageClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_location"
        app:srcCompat="@drawable/missing" />

    <ImageView
        android:id="@+id/facebookButton"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/youtubeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_title"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/youtubeButton"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/twitterButton"
        app:layout_constraintStart_toEndOf="@+id/facebookButton"
        app:layout_constraintTop_toBottomOf="@+id/official_party"
        app:srcCompat="@drawable/youtube" />

    <ImageView
        android:id="@+id/twitterButton"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toStartOf="@+id/official_picture"
        app:layout_constraintStart_toEndOf="@+id/youtubeButton"
        app:layout_constraintTop_toBottomOf="@+id/official_party"
        app:srcCompat="@drawable/twitter" />

    <TextView
        android:id="@+id/official_info1_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="35dp"
        android:text="@string/address"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebookButton" />

    <TextView
        android:id="@+id/official_info1_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="54dp"
        android:text="TextView1"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_info1_title" />

    <TextView
        android:id="@+id/official_info2_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/phone"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_info1_desc" />

    <TextView
        android:id="@+id/official_info2_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="54dp"
        android:text="TextView2"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_info2_title" />

    <TextView
        android:id="@+id/official_info3_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_info2_desc" />

    <TextView
        android:id="@+id/official_info3_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="54dp"
        android:text="TextView3"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_info3_title" />

    <TextView
        android:id="@+id/official_info4_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/website"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_info3_desc" />

    <TextView
        android:id="@+id/official_info4_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="54dp"
        android:text="TextView5"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/official_info4_title" />

    <ImageView
        android:id="@+id/party_logo"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="-50dp"
        app:layout_constraintStart_toEndOf="@+id/twitterButton"
        app:layout_constraintTop_toBottomOf="@+id/official_picture"
        app:srcCompat="@drawable/dem_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>